==> jeremybrodt/CMSIS-DAP/bootloader/hal/TARGET_Maxim/TARGET_MAX32550/usbd.c <==
#include <string.h>
#include <RTL.h>
#include <rl_usb.h>
#include <absacc.h>
#include "max32550.h"
#include "gpio_regs.h"
#include "usb_regs.h"
#define __NO_USB_LIB_C
#include "usb_config.c"
#define EPNUM_MASK  (~USB_ENDPOINT_DIRECTION_MASK)
#define INIT_INTS     (MXC_F_USB_DEV_INTEN_BRST | MXC_F_USB_DEV_INTFL_BRST_DN | MXC_F_USB_DEV_INTEN_VBUS | MXC_F_USB_DEV_INTFL_NO_VBUS)
#define CONNECT_INTS  (MXC_F_USB_DEV_INTEN_SETUP | MXC_F_USB_DEV_INTEN_EP_IN | MXC_F_USB_DEV_INTEN_EP_OUT | MXC_F_USB_DEV_INTEN_DMA_ERR)

void USBD_Init (void)
{
  // Configure VBUS detect pin
  MXC_GPIO2->en_clr = (0x1UL << 0);
  MXC_GPIO2->en1_clr = (0x1UL << 0);

  MXC_USB->cn = 0;
  MXC_USB->cn = MXC_F_USB_CN_EN;
  MXC_USB->dev_inten = 0;
  MXC_USB->dev_intfl = 0xFFFF;  // clear interrupts
  MXC_USB->dev_cn = 0;
  MXC_USB->dev_cn |= MXC_F_USB_DEV_CN_URST;
  MXC_USB->dev_cn = 0;

  reset_state();

  /* set the descriptor location */
  MXC_USB->ep_base = (uint32_t)&ep_buffer_descriptor;

  /* enable some interrupts */
  MXC_USB->dev_inten = INIT_INTS;
  NVIC_EnableIRQ(USB_IRQn);
}

void USBD_Connect (BOOL con)
{
  if (con) {
    MXC_USB->dev_intfl = 0xFFFF;  // clear interrupts
    MXC_USB->dev_inten |= CONNECT_INTS;
    MXC_USB->ep[0] |= MXC_F_USB_EP_INT_EN;
    MXC_USB->dev_cn |= (MXC_F_USB_DEV_CN_CONNECT | MXC_F_USB_DEV_CN_FIFO_MODE);
  } else {
    MXC_USB->dev_inten &= ~CONNECT_INTS;
    MXC_USB->ep[0] &= ~MXC_F_USB_EP_INT_EN;
    MXC_USB->dev_cn &= ~MXC_F_USB_DEV_CN_CONNECT;
  }
}

void USBD_ConfigEP (USB_ENDPOINT_DESCRIPTOR *pEPD)
{
  U32 EPNum;

  EPNum = pEPD->bEndpointAddress & EPNUM_MASK;

  if (EPNum < MXC_USB_NUM_EP) {

    // Clear existing configurations
    MXC_USB->ep[EPNum] = MXC_F_USB_EP_DT;

    if (pEPD->bEndpointAddress & USB_ENDPOINT_DIRECTION_MASK) {
      ep_info[EPNum].type = MXC_S_USB_EP_DIR_IN;
    } else {
      ep_info[EPNum].type = MXC_S_USB_EP_DIR_OUT;
    }

    ep_info[EPNum].len = pEPD->wMaxPacketSize;
  }
}

void USBD_EnableEP (U32 EPNum)
{
  ep_buffer_t *desc = get_desc(EPNum);

  EPNum &= EPNUM_MASK;
  MXC_USB->ep[EPNum] |= (MXC_F_USB_EP_INT_EN | ep_info[EPNum].type | MXC_F_USB_EP_DT);

  if (ep_info[EPNum].type == MXC_S_USB_EP_DIR_OUT) {
    // This is an OUT endpoint. Go ahead and register a request.
    desc = get_desc(EPNum);
    desc->buf0_address = (uint32_t)ep_buffer[EPNum];
    desc->buf0_desc = sizeof(ep_buffer[EPNum]);
    MXC_USB->out_owner = (1 << EPNum);
  }
}

void USBD_DisableEP (U32 EPNum)
{
  EPNum &= EPNUM_MASK;
  MXC_USB->ep[EPNum] = 0;
}

void USBD_ResetEP (U32 EPNum)
{
  ep_buffer_t *desc = get_desc(EPNum);

  EPNum &= EPNUM_MASK;
  MXC_USB->ep[EPNum] |= MXC_F_USB_EP_DT;

  if (ep_info[EPNum].type == MXC_S_USB_EP_DIR_OUT) {
    // This is an OUT endpoint. Go ahead and register a request.
    desc = get_desc(EPNum);
    desc->buf0_address = (uint32_t)ep_buffer[EPNum];
    desc->buf0_desc = sizeof(ep_buffer[EPNum]);
    MXC_USB->out_owner = (1 << EPNum);
  }
}

void USBD_SetStallEP (U32 EPNum)
{
  EPNum &= EPNUM_MASK;

  if (EPNum == 0) {
    MXC_USB->ep[0] |= (MXC_F_USB_EP_ST_STALL | MXC_F_USB_EP_STALL);
  } else {
    MXC_USB->ep[EPNum] |= MXC_F_USB_EP_STALL;
  }
}

void USBD_ClrStallEP (U32 EPNum)
{
  USBD_ResetEP(EPNum);
  MXC_USB->ep[EPNum & EPNUM_MASK] &= ~MXC_F_USB_EP_STALL;
}

U32 USBD_ReadEP (U32 EPNum, U8 *pData)
{
  ep_buffer_t *desc = get_desc(EPNum);
  U32 cnt = 0;
  USB_SETUP_PACKET *sup;

  EPNum &= EPNUM_MASK;

  if ((EPNum == 0) && setup_waiting) {
    setup_waiting = 0;
    cnt = 8; /* setup packet is fixed at 8 bytes */
    memcpy(pData, (void*)&MXC_USB->setup0, cnt);
    sup = (USB_SETUP_PACKET*)pData;

    if ( (sup->bmRequestType.Dir == REQUEST_HOST_TO_DEVICE) && (sup->wLength > 0) ) {
      // There is an OUT stage for this setup packet. Register a request.
      if (!(MXC_USB->out_owner & 1)) {
        desc = &ep_buffer_descriptor.ep0.out_buffer;
        desc->buf0_address = (uint32_t)ep_buffer[0];
        desc->buf0_desc = sup->wLength;
        MXC_USB->out_owner = 1;
      }
    }
  } else {
    cnt = desc->buf0_desc;
    memcpy(pData, ep_buffer[EPNum], cnt);

    if (EPNum != 0) {
      // Register the next request.
      desc->buf0_address = (uint32_t)ep_buffer[EPNum];
      desc->buf0_desc = sizeof(ep_buffer[EPNum]);
      MXC_USB->out_owner = (1 << EPNum);
    }
  }

  return cnt;
}

U32 USBD_WriteEP (U32 EPNum, U8 *pData, U32 cnt)
{
  ep_buffer_t *desc = get_desc(EPNum);
  uint32_t mask;

  EPNum &= EPNUM_MASK;
  mask = (1 << EPNum);

  if (MXC_USB->in_owner & mask) {
    return 0;
  }

  if (EPNum == 0) {
    // Prepare to ACK the status stage.
    MXC_USB->ep[0] |= MXC_F_USB_EP_ST_ACK;

    if ((cnt == 0) && !ep0_expect_zlp) {
      // This is a status stage ACK. Handled in hardware.
      return 0;
    } else if (cnt == USBD_MAX_PACKET0) {
      ep0_expect_zlp = 1;
    } else {
      ep0_expect_zlp = 0;
    }
  }

  if (cnt > MXC_USB_MAX_PACKET) {
    cnt = MXC_USB_MAX_PACKET;
  }

  /* prepare data to be sent */
  memcpy(ep_buffer[EPNum], pData, cnt);
  desc->buf0_address = (uint32_t)ep_buffer[EPNum];
  desc->buf0_desc = cnt;

  /* start the transaction */
  MXC_USB->in_owner = mask;

  return cnt;
}
